[gd_scene load_steps=6 format=3 uid="uid://bus48vblq4ked"]

[ext_resource type="Script" path="res://recruitment_modal.gd" id="1_42aob"]
[ext_resource type="Texture2D" uid="uid://dq0mgh25tw1fo" path="res://images/modal_bg_universal.png" id="2_ykq2s"]
[ext_resource type="FontFile" uid="uid://b4tchgklvshij" path="res://fonts/Cinzel.ttf" id="3_b8gke"]

[sub_resource type="Theme" id="Theme_h27cw"]
default_font = ExtResource("3_b8gke")
default_font_size = 22

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wgf6c"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
shadow_size = 5

[node name="RecruitmentModal" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_42aob")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 800.0
offset_bottom = 600.0
texture = ExtResource("2_ykq2s")
expand_mode = 1
stretch_mode = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 800.0
offset_bottom = 600.0
theme = SubResource("Theme_h27cw")
theme_override_styles/panel = SubResource("StyleBoxFlat_wgf6c")

[node name="Army" type="VBoxContainer" parent="Panel"]
layout_mode = 2
offset_left = 23.0
offset_top = 20.0
offset_right = 776.0
offset_bottom = 579.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Header" type="VBoxContainer" parent="Panel/Army"]
layout_mode = 2

[node name="RecruitmentRegion" type="Label" parent="Panel/Army/Header"]
layout_mode = 2
text = "Recruitment in Bornholm"
horizontal_alignment = 1

[node name="HeaderSection" type="VBoxContainer" parent="Panel/Army"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Army/HeaderSection"]
layout_mode = 2

[node name="ArmyName" type="Label" parent="Panel/Army/HeaderSection/HBoxContainer"]
layout_mode = 2
text = "Army III"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/Army/HeaderSection/HBoxContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2

[node name="RecruitmentLabel" type="Label" parent="Panel/Army/HeaderSection/HBoxContainer"]
layout_mode = 2
text = "Recruits"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Panel/Army/HeaderSection/HBoxContainer"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2

[node name="CostLabel" type="Label" parent="Panel/Army/HeaderSection/HBoxContainer"]
layout_mode = 2
text = "Cost"
horizontal_alignment = 1

[node name="UnitsSection" type="VBoxContainer" parent="Panel/Army"]
layout_mode = 2

[node name="Peasants" type="HBoxContainer" parent="Panel/Army/UnitsSection"]
custom_minimum_size = Vector2(315, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Army/UnitsSection/Peasants"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
text = "Peasants:"

[node name="Value" type="Label" parent="Panel/Army/UnitsSection/Peasants"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "4534"

[node name="HiredRecruits" type="Label" parent="Panel/Army/UnitsSection/Peasants"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "453"

[node name="Buttons" type="HSlider" parent="Panel/Army/UnitsSection/Peasants"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_vertical = 1
value = 50.0

[node name="MarginContainer" type="MarginContainer" parent="Panel/Army/UnitsSection/Peasants"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Cost" type="Label" parent="Panel/Army/UnitsSection/Peasants"]
layout_mode = 2
text = "Gold: 0"

[node name="Spearmen" type="HBoxContainer" parent="Panel/Army/UnitsSection"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Army/UnitsSection/Spearmen"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
text = "Spearmen:"

[node name="Value" type="Label" parent="Panel/Army/UnitsSection/Spearmen"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "15"

[node name="HiredRecruits" type="Label" parent="Panel/Army/UnitsSection/Spearmen"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "453"

[node name="Buttons" type="HSlider" parent="Panel/Army/UnitsSection/Spearmen"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_vertical = 1
value = 50.0

[node name="MarginContainer" type="MarginContainer" parent="Panel/Army/UnitsSection/Spearmen"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Cost" type="Label" parent="Panel/Army/UnitsSection/Spearmen"]
layout_mode = 2
text = "Gold: 1"

[node name="Archers" type="HBoxContainer" parent="Panel/Army/UnitsSection"]
custom_minimum_size = Vector2(315, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Army/UnitsSection/Archers"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
text = "Archers:"

[node name="Value" type="Label" parent="Panel/Army/UnitsSection/Archers"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "13"

[node name="HiredRecruits" type="Label" parent="Panel/Army/UnitsSection/Archers"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "453"

[node name="Buttons" type="HSlider" parent="Panel/Army/UnitsSection/Archers"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_vertical = 1
value = 50.0

[node name="MarginContainer" type="MarginContainer" parent="Panel/Army/UnitsSection/Archers"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Cost" type="Label" parent="Panel/Army/UnitsSection/Archers"]
layout_mode = 2
text = "Gold: 3 Wood: 1"

[node name="Swordmen" type="HBoxContainer" parent="Panel/Army/UnitsSection"]
custom_minimum_size = Vector2(315, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Army/UnitsSection/Swordmen"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
text = "Swordmen:"

[node name="Value" type="Label" parent="Panel/Army/UnitsSection/Swordmen"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "5"

[node name="HiredRecruits" type="Label" parent="Panel/Army/UnitsSection/Swordmen"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "453"

[node name="Buttons" type="HSlider" parent="Panel/Army/UnitsSection/Swordmen"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_vertical = 1
value = 50.0

[node name="MarginContainer" type="MarginContainer" parent="Panel/Army/UnitsSection/Swordmen"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Cost" type="Label" parent="Panel/Army/UnitsSection/Swordmen"]
layout_mode = 2
text = "Gold: 2"

[node name="Crossbowmen" type="HBoxContainer" parent="Panel/Army/UnitsSection"]
custom_minimum_size = Vector2(315, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Army/UnitsSection/Crossbowmen"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
text = "Crossbowmen:"

[node name="Value" type="Label" parent="Panel/Army/UnitsSection/Crossbowmen"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "0
"

[node name="HiredRecruits" type="Label" parent="Panel/Army/UnitsSection/Crossbowmen"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "453"

[node name="Buttons" type="HSlider" parent="Panel/Army/UnitsSection/Crossbowmen"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_vertical = 1
value = 50.0

[node name="MarginContainer" type="MarginContainer" parent="Panel/Army/UnitsSection/Crossbowmen"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Cost" type="Label" parent="Panel/Army/UnitsSection/Crossbowmen"]
layout_mode = 2
text = "Gold: 3 Wood: 1"

[node name="Horsemen" type="HBoxContainer" parent="Panel/Army/UnitsSection"]
custom_minimum_size = Vector2(315, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Army/UnitsSection/Horsemen"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
text = "Horsemen:"

[node name="Value" type="Label" parent="Panel/Army/UnitsSection/Horsemen"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "0
"

[node name="HiredRecruits" type="Label" parent="Panel/Army/UnitsSection/Horsemen"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "453"

[node name="Buttons" type="HSlider" parent="Panel/Army/UnitsSection/Horsemen"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_vertical = 1
value = 50.0

[node name="MarginContainer" type="MarginContainer" parent="Panel/Army/UnitsSection/Horsemen"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Cost" type="Label" parent="Panel/Army/UnitsSection/Horsemen"]
layout_mode = 2
text = "Gold: 5"

[node name="Knights" type="HBoxContainer" parent="Panel/Army/UnitsSection"]
custom_minimum_size = Vector2(315, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Army/UnitsSection/Knights"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
text = "Knights:"

[node name="Value" type="Label" parent="Panel/Army/UnitsSection/Knights"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "2
"

[node name="HiredRecruits" type="Label" parent="Panel/Army/UnitsSection/Knights"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "453"

[node name="Buttons" type="HSlider" parent="Panel/Army/UnitsSection/Knights"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_vertical = 1
value = 50.0

[node name="MarginContainer" type="MarginContainer" parent="Panel/Army/UnitsSection/Knights"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Cost" type="Label" parent="Panel/Army/UnitsSection/Knights"]
layout_mode = 2
text = "Gold: 5 Iron: 1"

[node name="Mounted Knights" type="HBoxContainer" parent="Panel/Army/UnitsSection"]
custom_minimum_size = Vector2(315, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Army/UnitsSection/Mounted Knights"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
text = "Mounted Knights:"

[node name="Value" type="Label" parent="Panel/Army/UnitsSection/Mounted Knights"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "0"

[node name="HiredRecruits" type="Label" parent="Panel/Army/UnitsSection/Mounted Knights"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "453"

[node name="Buttons" type="HSlider" parent="Panel/Army/UnitsSection/Mounted Knights"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_vertical = 1
value = 50.0

[node name="MarginContainer" type="MarginContainer" parent="Panel/Army/UnitsSection/Mounted Knights"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Cost" type="Label" parent="Panel/Army/UnitsSection/Mounted Knights"]
layout_mode = 2
text = "Gold: 10 Wood: 1"

[node name="Royal Guard" type="HBoxContainer" parent="Panel/Army/UnitsSection"]
custom_minimum_size = Vector2(315, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Army/UnitsSection/Royal Guard"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
text = "Royal Guard:"

[node name="Value" type="Label" parent="Panel/Army/UnitsSection/Royal Guard"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "0
"

[node name="HiredRecruits" type="Label" parent="Panel/Army/UnitsSection/Royal Guard"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "453"

[node name="Buttons" type="HSlider" parent="Panel/Army/UnitsSection/Royal Guard"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_vertical = 1
value = 50.0

[node name="MarginContainer" type="MarginContainer" parent="Panel/Army/UnitsSection/Royal Guard"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Cost" type="Label" parent="Panel/Army/UnitsSection/Royal Guard"]
layout_mode = 2
text = "Gold: 20 iron: 1"

[node name="TotalSection" type="VBoxContainer" parent="Panel/Army"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Army/TotalSection"]
layout_mode = 2

[node name="TotalLabel" type="Label" parent="Panel/Army/TotalSection/HBoxContainer"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
text = "Total:"

[node name="TotalValue" type="Label" parent="Panel/Army/TotalSection/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "1231
"

[node name="TotalHiredValue" type="Label" parent="Panel/Army/TotalSection/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "343"

[node name="TotalAvailable" type="Label" parent="Panel/Army/TotalSection/HBoxContainer"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
text = "/ 400 Available 
"

[node name="ButtonSection" type="VBoxContainer" parent="Panel/Army"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Army/ButtonSection"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/Army/ButtonSection/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="Button" type="Button" parent="Panel/Army/ButtonSection/HBoxContainer"]
layout_mode = 2
text = "Continue"
